--- a/final project v1.ipynb
+++ b/final project v1.ipynb
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c19a7b47",
    "metadata": {},
    "outputs": [
@@ -1895,7 +1895,7 @@
     "\n",
     "# Plot ROC curve\n",
     "plt.figure(figsize=(8, 6))\n",
-    "plt.plot(fpr_adv, tpr_adv, color='blue', lw=2, label=f'ROC curve (AUC = {auc_score:.3f})')\n",
+    "plt.plot(fpr_adv, tpr_adv, color='blue', lw=2, label=f'ROC curve (AUC = {auc_score_adv:.3f})')\n",
     "plt.plot([0, 1], [0, 1], color='gray', lw=1, linestyle='--', label='Random guess')\n",
     "plt.xlim([0.0, 1.0])\n",
     "plt.ylim([0.0, 1.05])\n",
